--- a/ClientApp/src/app/raw-material/raw-material.component.html
+++ b/ClientApp/src/app/raw-material/raw-material.component.html
@@ -334,7 +334,7 @@
                 <input style="width: 20%;" type="text" class="form-control" [(ngModel)]="RMSource" #Rawmatsource name="rmsourcename" value="">
 
                 <label>Approve RM</label><br>
-                <input style="" class="form-check-input" type="checkbox" [checked]="Approved == 'True' ? true : false" (change)="approvedChange($event)">
+                <input style="" [disabled]="rmapproveinci" class="form-check-input" type="checkbox" [checked]="Approved == 'True' ? true : false" (change)="approvedChange($event)">
               </div>
               <fieldset class="border p-2" style="margin-top:20px">
                 <legend class="w-auto" style="font-size:15px;color:maroon">RM Lead Time(Week(s))</legend>
