--- a/ClientApp/src/app/raw-material/search-inci-name/search-inci-name.component.html
+++ b/ClientApp/src/app/raw-material/search-inci-name/search-inci-name.component.html
@@ -54,7 +54,7 @@ Please provide a valid zip.
 
 
 
-            <select id="PRD" class="form-control" style="width:60%; margin-left:4px" #supp_status name="supp_status" value="">
+            <select id="PRD" class="form-control" style="width:60%; margin-left:4px"   [(ngModel)]="suppstatus" name="supp_status" value="">
 
 
 
@@ -66,11 +66,11 @@ Please provide a valid zip.
           </div>
           <div class="form-inline" style="padding-top:5px">
             <label for="PDR #">Inci Name</label>
-            <input style="width:60%;" type="text" class="form-control" [(ngModel)]="inci" #inciname name="inciname" value="" id="Project Name">
+            <input style="width:60%;" type="text" class="form-control" [(ngModel)]="inci" name="inciname" value="" id="Project Name">
           </div>
           <div class="form-inline"  style="padding-top:5px">
             <label for="PDR #">Function</label>
-            <select id="PRD" class="form-control" style="width:60%;  margin-left:4px"[(ngModel)]="fun_name"  name="funct" value="" >
+            <select id="PRD" class="form-control" style="width:60%;  margin-left:4px" [(ngModel)]="fun_name"  name="funct" value="" >
               <option selected>Choose...</option>
               <option *ngFor="let funcval of dataloadfuncsearch">{{funcval.function}}</option>
 
@@ -92,7 +92,7 @@ Please provide a valid zip.
 
 
 
-            <input style="width: 60%;" type="text" class="form-control" id="sup"[(ngModel)]="supplierva"  name="supplierv" value="">
+            <input style="width: 60%;" type="text" class="form-control" id="sup" [(ngModel)]="supplierva"  name="supplierv" value="">
           </div>
 
 
@@ -118,7 +118,7 @@ Please provide a valid zip.
         </div>
         <div class="form-group col-md-2">
           <div>
-            <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 1%;width: 60%;margin-top:25%" (click)="quicksaveval(supp_status.value,inciname.value,itemcode.value,supplier.value,tradename.value);">Quick Save </button>
+            <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 1%;width: 60%;margin-top:25%" (click)="quicksaveval();">Quick Save </button>
           </div>
           <div>
             <button type="submit" class="btn btn-primary buttoncolor" style="margin-left: 1%;width:60%;margin-top:3%" (click)="Clearaw();">Clear </button>
