--- a/ClientApp/src/app/formula-restriction/rawmaterial-restriction-us/rawmaterial-restriction-us.component.html
+++ b/ClientApp/src/app/formula-restriction/rawmaterial-restriction-us/rawmaterial-restriction-us.component.html
@@ -41,47 +41,50 @@
 
     <div class="form-inline" style="padding-top:1%;">
       <label>Maximum as used concentration<br>for safe as used conclusion</label>
-      <input style="margin-left: 1%; width: 45%;" type="text" class="form-control">
+      <input style="margin-left: 1%; width: 45%;" type="text" class="form-control" [(ngModel)]="Maximumusedforconclusion" value="" name="maxcon">
     </div>
     <div class="form-inline" style="padding-top:1%;">
-      <label>Concentration or otehr limitation <br /> on use of safe with<br />qualification conclusion</label>
-      <textarea style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control"></textarea>
+      <label>Concentration or other limitation <br /> on use of safe with<br />qualification conclusion</label>
+      <textarea style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="concentrationconclusion" value="" name="conclu"></textarea>
     </div>
     <div class="form-inline" style="padding-top:1%;">
       <label>Maximum Percentage</label>
-      <input style="margin-left: 1%; width: 15%;" type="text" class="form-control">%
+      <input style="margin-left: 1%; width: 15%;" type="text" class="form-control" [(ngModel)]="maximumconclusion" value="" name="maxper">%
 
     </div>
     <div class="form-inline" style="padding-top:1%;">
-      <label>Safetu concerns leading to<br>unsafe conclusion</label>
-      <textarea style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control"></textarea>
+      <label>Safety concerns leading to<br>unsafe conclusion</label>
+      <textarea style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="safetuconclusion" value="" name="safety"></textarea>
 
     </div>
     <div class="form-inline" style="padding-top:1%;">
       <label>Conditions of use and warnings<br />which must be printed on the label</label>
-      <textarea style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control"></textarea>
+      <textarea style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="conditionconclusion" value="" name="condition"></textarea>
 
     </div>
 
     <div class="form-inline" style="padding-top:1%;">
       <label>Journal Citation</label>
-      <input style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control">
+      <input style="margin-left: 1%; width: 45%;" type="text" rows="2"
+             class="form-control" [(ngModel)]="journalconclusion" value="" name="jour">
 
     </div>
 
     <div class="form-inline" style="padding-top:1%;">
       <label>Internal Reg.Notes</label>
-      <textarea style="margin-left:1%; width: 45%;" type="text" rows="2" class="form-control"></textarea>
+      <textarea style="margin-left:1%; width: 45%;" type="text" rows="2" class="form-control"
+                [(ngModel)]="internalconclusion" value="" name="commnt"></textarea>
 
     </div>
     <div class="form-inline" style="padding-top:1%;">
       <label>Source of Info</label>
-      <input style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control">
+      <input style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="internalSource" value="" name="source">
 
     </div>
     <div class="form-inline" style="padding-top:1%;">
       <label>Source Regulation Doc Link</label>
-      <input style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control">
+      <input style="margin-left: 1%; width: 45%;" type="text" rows="2"
+             class="form-control" [(ngModel)]="SourceRegulationconclusion" value="" name="doclink">
 
     </div>
   </form>
@@ -92,8 +95,7 @@
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px" matDialogClose>Close</button>
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px">New</button>
 
-    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;margin-top:1%;margin-left:10px">Save / Update</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;margin-top:1%;margin-left:10px" (click)="Restriction_SaveUpdateUS();">Save / Update</button>
 
   </div>
 </div>
-
