--- a/ClientApp/src/app/formula-restriction/rawmaterial-restriction/rawmaterial-restriction.component.html
+++ b/ClientApp/src/app/formula-restriction/rawmaterial-restriction/rawmaterial-restriction.component.html
@@ -7,52 +7,60 @@
     <input style="margin-left: 1%; width: 60%; color:maroon" [(ngModel)]="INCINamedata" type="text" class="form-control">
   </div>
 
-  
 
 
-    <div class="form-inline" style="padding-top:1%;">
-      <label>Field of Application and use</label>
-      <input style="margin-left: 1%; width: 45%;" type="text" class="form-control" [(ngModel)]="FieldofApplndata">
-    </div>
-    <div class="form-inline" style="padding-top:1%;">
-      <label>Maximum authorized Concentration <br /> in the Finished Cosmetic Product</label>
-      <textarea style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="Maximumdata"></textarea>
-    </div>
-    <div class="form-inline" style="padding-top:1%;">
-      <label>Maximum Percentage</label>
-      <input style="margin-left: 1%; width: 15%;" type="text" class="form-control" [(ngModel)]="maxpercentagedata">%
 
-    </div>
-    <div class="form-inline" style="padding-top:1%;">
-      <label>Our Limitaions and Requirements</label>
-      <textarea style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="OtherLimitationsdata"></textarea>
+  <div class="form-inline" style="padding-top:1%;">
+    <label>Field of Application and use</label>
+    <input style="margin-left: 1%; width: 45%;" type="text" class="form-control" [(ngModel)]="FieldofApplndata" name="field" value="">
+  </div>
+  <div class="form-inline" style="padding-top:1%;">
+    <label>Maximum authorized Concentration <br /> in the Finished Cosmetic Product</label>
+    <textarea style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="Maximumdata" name="concentr" value=""></textarea>
+  </div>
+  <div class="form-inline" style="padding-top:1%;">
+    <label [hidden]="ifCArestriction">ppm</label>
+    <input [hidden]="ifCArestriction" style="width: 15%;" type="text" class="form-control" [(ngModel)]="ppm" name="pm" value="">
 
-    </div>
-    <div class="form-inline" style="padding-top:1%;">
-      <label>Conditions of use and warnings<br />which must be printed on the label</label>
-      <textarea style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control"[(ngModel)]="Conditionsdata"></textarea>
+  </div>
+  <div class="form-inline" style="padding-top:1%;">
+    <label [hidden]="ifchina">Minimum Percentage</label>
+    <input [hidden]="ifchina" style="width: 15%;" type="text" class="form-control" [(ngModel)]="minpercent" name="minper" value="">
 
-    </div>
-    <div class="form-inline" style="padding-top:1%;">
-      <label>Source of Info</label>
-      <input style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control"[(ngModel)]="Sourceinfodata">
+    <label [hidden]="ifchinamax">Maximum Percentage</label>
+    <input [hidden]="ifchinamax" style="margin-left: 1%; width: 15%;" type="text" class="form-control" [(ngModel)]="maxpercentagedata" name="maxperc" value="">%
 
-    </div>
-    <div class="form-inline" style="padding-top:1%;">
-      <label>Journal Citation</label>
-      <input style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control">
+  </div>
+  <div class="form-inline" style="padding-top:1%;">
+    <label>Our Limitaions and Requirements</label>
+    <textarea style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="OtherLimitationsdata" name="limitations" value=""></textarea>
 
-    </div>
-    <div class="form-inline" style="padding-top:1%;">
-      <label>Source Regulation Doc Link</label>
-      <input style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control">
+  </div>
+  <div class="form-inline" style="padding-top:1%;">
+    <label>Conditions of use and warnings<br />which must be printed on the label</label>
+    <textarea style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="Conditionsdata" name="condition" value=""></textarea>
 
-    </div>
-    <div class="form-inline" style="padding-top:1%;">
-      <label>Internal Reg.Notes</label>
-      <textarea style="margin-left:1%; width: 45%;" type="text" rows="2" class="form-control"></textarea>
+  </div>
+  <div class="form-inline" style="padding-top:1%;">
+    <label>Source of Info</label>
+    <input style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="Sourceinfodata" name="source" value="">
 
-    </div>
+  </div>
+  <div class="form-inline" style="padding-top:1%;">
+    <label>Journal Citation</label>
+    <input style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="journal" name="jrnal" value="">
+
+  </div>
+  <div class="form-inline" style="padding-top:1%;">
+    <label>Source Regulation Doc Link</label>
+    <input style="margin-left: 1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="sourceregulation" name="source reg" value="">
+
+  </div>
+  <div class="form-inline" style="padding-top:1%;">
+    <label>Internal Reg.Notes</label>
+    <textarea style="margin-left:1%; width: 45%;" type="text" rows="2" class="form-control" [(ngModel)]="internalReg" name="internal" value=""></textarea>
+
+  </div>
 
   <style>
 
@@ -69,7 +77,7 @@
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px" matDialogClose>Close</button>
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px">New</button>
 
-    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;margin-top:1%;margin-left:10px">Save / Update</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;margin-top:1%;margin-left:10px" (click)="Restriction_SaveUpdate();">Save / Update</button>
 
   </div>
 </div>
