--- a/ClientApp/src/app/raw-material/raw-material.component.css
+++ b/ClientApp/src/app/raw-material/raw-material.component.css
@@ -215,3 +215,16 @@ label2 {
   opacity: 1;
   transform: translateY(1.25rem);
 }
+input[type="file"] {
+  display: none;
+}
+
+
+
+.custom-file-upload {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  color: blueviolet;
+}
